[package]
name = "exzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
ctrlc = "3.2.3"
tempfile = "3.3.0"
zip = { version = "0.6.2", default-features = false }

[profile.release]
lto = true
