[package]
name = "exzip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.27", features = ["derive"] }
ctrlc = "3.2.3"
pathdiff = "0.2.1"
tempfile = "3.4.0"
zip = { version = "0.6.2", default-features = false }

[profile.release]
lto = true
